# churro-cli

./: .gitignore  Cargo.toml
data/: db.json  jqlSearch.json  projects.json  project{id}.json
src/: lib.rs  main.rs  tickets.json
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/inputs/: events.rs
src/io/: handler.rs  mod.rs
src/jira/: api_service.rs  auth_service.rs  jira_service.rs  mod.rs  project_service.rs
src/structs/: project.rs
