[package]
name = "churro-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1", features = [ "serde" ] }
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
tui-logger = "0.9.2"
eyre = "0.6.8"
log = "0.4.19"
